Fix text overflow and submit on enter (#40)
<!--

Thank you for submitting a pull request!

Here's a checklist you might find useful.
[ ] There is an associated issue that is labelled
  'Bug' or 'help wanted' or is in the Community milestone
[ ] Code is up-to-date with the `main` branch
[ ] You've successfully run `npm test` locally
[ ] There are new or updated tests validating the change

-->

Fixes #

--- a/src/controls/MMapRouteControl/MMapWaypointInput/index.css
+++ b/src/controls/MMapRouteControl/MMapWaypointInput/index.css
@@ -36,7 +36,8 @@
     .mappable--route-control_waypoint-input__field {
         box-sizing: border-box;
         height: 40px;
-        padding: 12px;
+        padding: 12px 30px 12px 12px;
+        text-overflow: ellipsis;
         border: none;
         border-radius: 8px;
         background: rgba(92, 94, 102, 0.06);
